Add tacocat & back

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -26,6 +26,7 @@
 	<card class="Tacocat">Tacocat</card>
 	<card class="BeardCat">Beard cat</card>
    <card class="Cattermelon">Cattermelon</card>
+   <card class="Back"></card>
     
    <script src="js/lib/jscookie.js"></script>
    <script src="js/game.js"></script>
