Start adding snapping

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -35,7 +35,7 @@
 		<card class="Back fake"></card>
 	</div>
 
-   <div class="hand"></div>
+   <div class="hand"><card class="Snap vis_hidden fake" id="handSnap"></card></div>
     
    <script src="js/lib/jscookie.js"></script>
    <script src="js/game.js"></script>
