--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -36,6 +36,8 @@
 	</div>
 
    <div class="hand"><card class="Snap vis_hidden fake" id="handSnap"></card></div>
+
+   <div class="stack"><card class="Snap vis_hidden fake" id="stackSnap"></card></div>
     
    <script src="js/lib/jscookie.js"></script>
    <script src="js/game.js"></script>
