--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -36,6 +36,7 @@
 	</div>
 
    <div class="hand"></div>
+   <div id="scrollRect" class="vis_hidden"></div>
 
    <div class="stack"><card class="Snap vis_hidden fake" id="stackSnap"></card></div>
    <button id="putMultiple">&#10137;</button>
