Add multiplayer stack. Co-authored-by: ThePerkinrex <theperkinrex@gmail.com>

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -14,20 +14,20 @@
 </head>
 <body>
    <h1 id="username" class="subtitle"></h1>
-   <card class="ExplodingKitten hidden">Exploding kitten</card>
-   <card class="Attack hidden">Attack</card>
-   <card class="Defuse hidden">Defuse</card>
-   <card class="Nope hidden">Nope</card>
-   <card class="SeeTheFuture hidden">See the future (x3)</card>
-   <card class="Skip hidden">Skip</card>
-   <card class="Favor hidden">Favor</card>
-   <card class="Shuffle hidden">Shuffle</card>
-   <card class="RainbowCat hidden">Rainbow cat</card>
-   <card class="HairyPotatoCat hidden">Hairy potato cat</card>
-   <card class="TacoCat hidden">Tacocat</card>
-   <card class="BeardCat hidden">Beard cat</card>
-   <card class="Cattermelon hidden">Cattermelon</card>
-   <card class="Back hidden"></card>
+   <card class="ExplodingKitten hidden template">Exploding kitten</card>
+   <card class="Attack hidden template">Attack</card>
+   <card class="Defuse hidden template">Defuse</card>
+   <card class="Nope hidden template">Nope</card>
+   <card class="SeeTheFuture hidden template">See the future (x3)</card>
+   <card class="Skip hidden template">Skip</card>
+   <card class="Favor hidden template">Favor</card>
+   <card class="Shuffle hidden template">Shuffle</card>
+   <card class="RainbowCat hidden template">Rainbow cat</card>
+   <card class="HairyPotatoCat hidden template">Hairy potato cat</card>
+   <card class="TacoCat hidden template">Tacocat</card>
+   <card class="BeardCat hidden template">Beard cat</card>
+   <card class="Cattermelon hidden template">Cattermelon</card>
+   <card class="Back hidden template"></card>
 
 	<div class="deck">
 		<card class="Back fake"></card>
