Server hosts deck and player can see the future.

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -33,7 +33,9 @@
 		<card class="Back fake"></card>
 		<card class="Back fake"></card>
 		<card class="Back fake"></card>
-	</div>
+   </div>
+   
+   <p id="startTime"><span id="timer"></span>&#128337;</p>
 
    <div class="hand"></div>
    <div id="scrollRect" class="vis_hidden"></div>
@@ -44,6 +46,13 @@
    <div class="stackHandInfo error">&#10008;</div>
    <div class="stackHand"><card class="Snap vis_hidden fake" id="stackHandSnap"></card></div>
     
+   <div id="stf_modal" class="hidden">
+      <card id="stf_card1"></card>
+      <card id="stf_card2"></card>
+      <card id="stf_card3"></card>
+      <button id="stf_ok">Ok</button>
+   </div>
+
    <script src="js/lib/jscookie.js"></script>
    <script src="js/game.js"></script>
 </body>
