Create general scroll function.

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -37,8 +37,8 @@
    
    <p id="startTime"><span id="timer"></span>&#128337;</p>
 
-   <div class="hand"></div>
-   <div id="scrollRect" class="vis_hidden"></div>
+   <div id="hand"></div>
+   <div id="hand_scroll" class="scrollRect vis_hidden"></div>
 
    <div class="stack"><card class="Snap vis_hidden fake" id="stackSnap"></card></div>
    <button id="putMultiple">&#10137;</button>
