A lot of changes plus adding license.
Co-authored-by: ThePerkinrex <theperkinrex@gmail.com>

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -53,6 +53,14 @@
       <button id="stf_ok">Ok</button>
    </div>
 
+   <div id="defused_modal" class="hidden">
+      <div id="defused_cards">
+         <div id="ek_position_defused"></div>
+      </div>
+      <button id="defused_ok">Ok</button>
+   </div>
+   <div id="defused_scroll" class="scrollRect vis_hidden"></div>
+
    <script src="js/lib/jscookie.js"></script>
    <script src="js/game.js"></script>
 </body>
