Add favicon and start working on the people list.

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+   <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -73,7 +74,11 @@
 
    <div id="people_modal" class="hidden">
       <div id="people_modal_content">
-         Hi
+         <h2>Players</h2>
+         <button id="leave">Leave Game</button>
+         <hr color="#f00">
+         <ul id="people_list"></ul>
+         <button id="people_ok">Ok</button>
       </div>
    </div>
 
