--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -44,10 +44,10 @@
       <img src="/images/people.svg" id="people">
    </div>
 
-   <div id="hand"></div>
+   <div class="hand" id="hand"></div>
    <div id="hand_scroll" class="scrollRect vis_hidden"></div>
 
-   <div class="stack">
+   <div class="discardPile">
       <card class="Snap vis_hidden fake" id="stackSnap"></card>
    </div>
    <button id="putMultiple">&#10137;</button>
