Implement five card combo

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -93,6 +93,13 @@
    </div>
    <div id="threecat_scroll" class="scrollRect vis_hidden"></div>
 
+   <div id="fivecat_modal" class="hidden">
+      <div id="fivecat_cards">
+      </div>
+      <button id="fivecat_ok">Ok</button>
+   </div>
+   <div id="fivecat_scroll" class="scrollRect vis_hidden"></div>
+
    <script src="js/lib/jscookie.js"></script>
    <script src="js/gameVariables.js"></script>
    <script src="js/ws.js"></script>
