Implement Attack card

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -30,6 +30,7 @@
    <card class="TacoCat hidden template">Tacocat</card>
    <card class="BeardCat hidden template">Beard cat</card>
    <card class="Cattermelon hidden template">Cattermelon</card>
+   <!-- <card class="TargetedAttack hidden template">Targeted Attack</card> NOT IMPLEMENTED ATM -->
    <card class="Back hidden template"></card>
 
    <div class="deck">
