Implement Favor card and fix defuse

--- a/web_client/html/game.html
+++ b/web_client/html/game.html
@@ -101,6 +101,13 @@
    </div>
    <div id="fivecat_scroll" class="scrollRect vis_hidden"></div>
 
+   <div id="favor_modal" class="hidden">
+      <div id="favor_cards">
+      </div>
+      <button id="favor_ok">Ok</button>
+   </div>
+   <div id="favor_scroll" class="scrollRect vis_hidden"></div>
+
    <script src="js/lib/jscookie.js"></script>
    <script src="js/gameVariables.js"></script>
    <script src="js/ws.js"></script>
